data/all_generated_tests/raw_wast_tests/loop_ImproperFunctionCallorReturnHandling_926.wast
;; 7. **Test Case**: Create a loop where a function is called to perform a recursive loop and return control to the original loop upon completion.    - **Constraint Check**: Validate correct return control from recursive function calls within the loop.    - **Improper Function Call or Return Handling**: Recursive call returns improperly managing original loop’s context.

(assert_invalid
  (module
    (func $recursive_loop (result i32)
      (local i32)
      (loop (result i32)
        (call $recursive_func)
      )
    )
    (func $recursive_func (result i32)
      (local i32)
      (loop (result i32)
        (br 0)
      )
    )
  )
  "type mismatch"
)